--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: default
 		<header>
 			<h2>Welcome to My World</h2>
 		</header>
-		<p>This is Junxian, a <strong>pasionate Test Engineer</strong> who strongly advocates for diversity and inclusion.</p>
+		<p>This is He Junxian, a <strong>pasionate test engineer</strong> who strongly advocates for diversity and inclusion.</p>
+		<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra</p>
 		<hr />
 		<div class="row">
 			<section class="4u">
