update default.html and index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@ layout: default
 <div id="featured">
 	<div class="container">
 		<header>
-			<h2>Welcome to My World</h2>
+			<h2>Welcome to My Websit</h2>
 		</header>
-		<p>This is He Junxian, a <strong>pasionate test engineer</strong> who strongly advocates for diversity and inclusion.</p>
-		<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra</p>
+		<p>Hi, this is He Junxian, a pasionate <strong>test engineer</strong> who love to explore and learn new things. 
+			I am a tester with 4 years of manual testing and automated testing experience in different project and technological environments. 
+			I have extensively written test cases, automated test scripts and executed test cases on different applications. 
+			Also I have good knowledge on Automation tools or frameworks like selenium, httprunner, QT4A and postman, etc. 
+			I consider myself a fast learner and I prefer to knowing things well before I use or test it.
+			</p>
+		<p>Also I strongly advocates for diversity and inclusion.</p>
 		<hr />
 		<div class="row">
 			<section class="4u">
@@ -45,14 +50,14 @@ layout: default
 					<header>
 						<h2>Mauris vulputate dolor</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra</p>
 				</section>
 				<section class="6u">
 					<a href="#" class="image full"><img src="/assets/images/pic02.jpg" alt=""></a>
 					<header>
 						<h2>Mauris vulputate dolor</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra</p>
 				</section>
 			</div>
 
@@ -62,14 +67,14 @@ layout: default
 					<header>
 						<h2>Mauris vulputate dolor</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra.</p>
 				</section>
 				<section class="6u">
 					<a href="#" class="image full"><img src="/assets/images/pic04.jpg" alt=""></a>
 					<header>
 						<h2>Mauris vulputate dolor</h2>
 					</header>
-					<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+					<p>"Program testing can be used to show the presence of bugs, but never to show their absence!" -- Edsger Dijkstra</p>
 				</section>
 			</div>
 
