--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@ layout: default
 			<h2>Welcome to My Websit</h2>
 		</header>
 		<p>Hi, this is He Junxian, a pasionate <strong>test engineer</strong> who love to explore and learn new things. 
-			I am a tester with 4 years of manual testing and automated testing experience in different project and technological environments. 
-			I have extensively written test cases, automated test scripts and executed test cases on different applications. 
-			Also I have good knowledge on Automation tools or frameworks like selenium, httprunner, QT4A and postman, etc. 
-			I consider myself a fast learner and I prefer to knowing things well before I use or test it.
-			</p>
+			<p>I am a tester with 4 years of manual testing and automated testing experience in different project and technological environments. 
+			I have extensively written test cases, automated test scripts and executed test cases on different applications. </p>
+			<p>I have good knowledge on Automation tools or frameworks like selenium, httprunner, QT4A and postman, etc. </p>
+			<p>I consider myself a fast learner and I prefer to knowing things well before I use or test it.</p>
 		<p>Also I strongly advocates for diversity and inclusion.</p>
 		<hr />
 		<div class="row">
