update index.html and default.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ layout: default
 		<header>
 			<h2>Welcome to My Websit</h2>
 		</header>
-		<p>Hi, this is He Junxian, a pasionate <strong>test engineer</strong> who love to explore and learn new things. 
-			<p>I am a tester with 4 years of manual testing and automated testing experience in different project and technological environments. 
+		<p>Hi, this is <strong>He Junxian</strong>, a pasionate test engineer who love to explore and learn new things. 
+			<p>I am a tester with 4 years of <strong>manual testing</strong> and <strong>automated testing</strong> experience in different project and technological environments. 
 			I have extensively written test cases, automated test scripts and executed test cases on different applications. </p>
 			<p>I have good knowledge on Automation tools or frameworks like selenium, httprunner, QT4A and postman, etc. </p>
-			<p>I consider myself a fast learner and I prefer to knowing things well before I use or test it.</p>
+			<p>I consider myself a <strong>fast learner</strong> and I prefer to knowing things well before I use or test it.</p>
 		<p>Also I strongly advocates for diversity and inclusion.</p>
 		<hr />
 		<div class="row">
