--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ layout: default
 <div id="featured">
 	<div class="container">
 		<header>
-			<h2>Welcome to My Websit</h2>
+			<h2>Welcome to My Website</h2>
 		</header>
 		<p>Hi, this is <strong>He Junxian</strong>, a pasionate test engineer who love to explore and learn new things. 
-			<p>I am a tester with 4 years of <strong>manual testing</strong> and <strong>automated testing</strong> experience in different project and technological environments. 
-			I have extensively written test cases, automated test scripts and executed test cases on different applications. </p>
-			<p>I have good knowledge on Automation tools or frameworks like selenium, httprunner, QT4A and postman, etc. </p>
+			<p>I am a <strong>ISTQB</strong> tester with <strong>manual testing</strong> and <strong>automated testing</strong> experience in different project and technological environments. 
+			I design test plan, write test cases, develop automated framework and test scripts by <strong>Python</strong> and execute test cases on different applications (web, app, embedded system) in the past <strong>4 years</strong>. </p>
+			<p>I have experience with different flavors of Testing like <strong>Function, Automation, Exploratory Testing, UI and API Testing</strong>. I am good at using tools or frameworks like selenium, postman, wireshark, charlse, httprunner, QT4A, Git, etc. I am also familiar with <strong>agile and scrum</strong>.</p>
 			<p>I consider myself a <strong>fast learner</strong> and I prefer to knowing things well before I use or test it.</p>
 		<p>Also I strongly advocates for diversity and inclusion.</p>
 		<hr />
