--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@ layout: default
 		<div class="row">
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-briefcase"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+				<h3>About work</h3>
+				<p>What is work?</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-lock"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
+				<h3>About life</h3>
+				<p>Life is full of ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-globe"></span></span>
-				<h3>Maecenas luctus lectus</h3>
-				<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+				<h3>About knowledge</h3>
+				<p>It is never boring to learn new things.</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 
