--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@ layout: default
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-briefcase"></span></span>
 				<h3>About work</h3>
-				<p>What is work?</p>
+				<p>Have you ever thought about what is work?</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
-				<span class="pennant"><span class="fa fa-lock"></span></span>
+				<span class="pennant"><span class="fa fa-home"></span></span>
 				<h3>About life</h3>
-				<p>Life is full of ...</p>
+				<p>Life is full of fun and ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-globe"></span></span>
 				<h3>About knowledge</h3>
-				<p>It is never boring to learn new things.</p>
+				<p>It is never boring to learn new things ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 
