--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ layout: default
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-briefcase"></span></span>
 				<h3>About work</h3>
-				<p>Have you ever thought about what is work?</p>
+				<p>Have you ever thought about what is work ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-home"></span></span>
 				<h3>About life</h3>
-				<p>Life is full of fun but also it has ...</p>
+				<p>Life is full of fun, but it also has something else like ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
