--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-home"></span></span>
 				<h3>About life</h3>
-				<p>Life is full of fun, but it also has something else like ...</p>
+				<p>Life is fun, but it also has something else like ...</p>
 				<a href="#" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
