--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@ layout: default
 				<span class="pennant"><span class="fa fa-briefcase"></span></span>
 				<h3>About work</h3>
 				<p>Have you ever thought about what is work ...</p>
-				<a href="#" class="button button-style1">Read More</a>
+				<a href="{{ site.prefix }}/left-sidebar.html" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-home"></span></span>
 				<h3>About life</h3>
 				<p>Life is fun, but it also has something else like ...</p>
-				<a href="{{ site.prefix }}{{ post.url }}" class="button button-style1">Read More</a>
+				<a href="{{ site.prefix }}/blog/" class="button button-style1">Read More</a>
 			</section>
 			<section class="4u">
 				<span class="pennant"><span class="fa fa-globe"></span></span>
 				<h3>About knowledge</h3>
 				<p>It is never boring to learn new things ...</p>
-				<a href="#" class="button button-style1">Read More</a>
+				<a href="{{ site.prefix }}/right-sidebar.html" class="button button-style1">Read More</a>
 			</section>
 
 		</div>
